Z1| Init Swagger and add some function
